--- a/index.html
+++ b/index.html
@@ -13,91 +13,102 @@
 
 <body>
     <section class="top">
-        <div class="container">
-            <div class="row">
-                <ul class="nav nav-pills">
-                    <li role="presentation" class="active">
-                        <a href="#">Start bootstrap</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="#">Download</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="#">Features</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="#">Contact</a>
+
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <ul class="nav navbar-nav my-nav-left">
+                    <li role="navigation">
+                        <a href="http://getbootstrap.com/docs/3.3/getting-started/">Start bootstrap</a>
                     </li>
                 </ul>
-
+                <ul class="nav navbar-nav navbar-right my-nav">
+                    <li role="navigation">
+                        <a href="#download">Download</a>
+                    </li>
+                    <li role="navigation">
+                        <a href="#features">Features</a>
+                    </li>
+                    <li role="navigation">
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
             </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <h2>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything
-                        else!
-                    </h2>
-                    <button type="button" class="btn btn-default">START NOW FREE</button>
-                </div>
-                <div class="col-xs-6 text-center">
-                    <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
-                </div>
+        </nav>
 
+
+
+        <div class="row">
+            <div class="col-xs-6">
+                <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!
+                </h1>
+                <button type="button" class="btn btn-default">START NOW FREE</button>
             </div>
+            <div class="col-xs-6 text-center">
+                <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
+            </div>
+
         </div>
+
     </section>
 
     <section class="yell">
-        <div class="container" id="yellow">
-            <div class="row">
-                <div class="col-xs-12 text-center">
-                    <h1>Discover what all the
-                        <br> buzz is about!</h1>
-                    <p>Our app is available on any mobile device! Download now to get started!</p>
-                    <img id="kep2" src="/img/app-store-badge.svg" alt="appstore">
-                    <img id="kep3" src="/img/google-play-badge.svg" alt="google">
+        <a name="download">
+            <div class="container" id="yellow">
+                <div class="row">
+                    <div class="col-xs-12 text-center">
+                        <h1>
+                            Discover what all the
+                            <br> buzz is about!
+                        </h1>
+                        <p>Our app is available on any mobile device! Download now to get started!</p>
+                        <img id="kep2" src="/img/app-store-badge.svg" alt="appstore">
+                        <img id="kep3" src="/img/google-play-badge.svg" alt="google">
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
     </section>
 
 
     <section class="white">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 text-center">
-                    <h2>Unlimited Features, Unlimited Fun</h2>
-                    <p>Check out what you can do with this app theme!</p>
-                    <p>_____________</p>
-                </div>
+        <a name="features">
+            <div class="container">
                 <div class="row">
-                    <div class="col-xs-6 text-center">
-                        <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
+                    <div class="col-xs-12 text-center">
+                        <h2>Unlimited Features, Unlimited Fun</h2>
+                        <p>Check out what you can do with this app theme!</p>
+                        <p>_____________</p>
                     </div>
-                    <div class="col-xs-3 features text-center">
-                        <h6>&#128241;</h6>
-                        <h5>Device Mockups</h5>
-                        <p>Ready to use HTML/CSS device mockups, no Photoshop required!</p>
-                    </div>
+                    <div class="row">
+                        <div class="col-xs-6 text-center">
+                            <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
+                        </div>
+                        <div class="col-xs-3 features text-center">
+                            <h6>&#128241;</h6>
+                            <h5>Device Mockups</h5>
+                            <p>Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                        </div>
 
-                    <div class="col-xs-3 features text-center">
-                        <h6>&#128247;</h6>
-                        <h5>Flexible Use</h5>
-                        <p>Put an image, video, animation, or anything else in the screen!</p>
-                    </div>
-                    <div class="col-xs-3 features text-center">
-                        <h6>&#128230;</h6>
-                        <h5>Free to Use</h5>
-                        <p>As always, this theme is free to download and use for any purpose!</p>
-                    </div>
+                        <div class="col-xs-3 features text-center">
+                            <h6>&#128247;</h6>
+                            <h5>Flexible Use</h5>
+                            <p>Put an image, video, animation, or anything else in the screen!</p>
+                        </div>
+                        <div class="col-xs-3 features text-center">
+                            <h6>&#128230;</h6>
+                            <h5>Free to Use</h5>
+                            <p>As always, this theme is free to download and use for any purpose!</p>
+                        </div>
 
-                    <div class="col-xs-3 features text-center">
-                        <h6> &#128275;</h6>
-                        <h5>Open Source</h5>
-                        <p>Since this theme is MIT licensed, you can use it commercially!</p>
+                        <div class="col-xs-3 features text-center">
+                            <h6> &#128275;</h6>
+                            <h5>Open Source</h5>
+                            <p>Since this theme is MIT licensed, you can use it commercially!</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </a>
     </section>
 
 
@@ -115,14 +126,17 @@
     </section>
 
     <section class="yell">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 text-center">
-                    <h1>We &#10084; new friends!</h1>
-                </div>
+        <a name="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 text-center">
+                        <h1>We
+                            <span style="color: red">&#10084;</span> new friends!</h1>
+                    </div>
 
+                </div>
             </div>
-        </div>
+        </a>
     </section>
 
     <footer>
@@ -205,6 +219,7 @@
 
     <script src="/js/lib/jquery-3.3.1.min.js"></script>
     <script src="/bootstrap3/js/bootstrap.min.js"></script>
+    <script src="/js/ownJs.js"></script>
 </body>
 
 </html>
