top section and button nice

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
     <section class="top">
-
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <ul class="nav navbar-nav my-nav-left">
@@ -35,18 +34,19 @@
             </div>
         </nav>
 
-
-
-        <div class="row">
-            <div class="col-xs-6">
-                <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!
-                </h1>
-                <button type="button" class="btn btn-default">START NOW FREE</button>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-8">
+                    <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything
+                        else!
+                    </h1>
+                    <br>
+                    <button type="button" class="btn btn-default">START NOW FOR FREE</button>
+                </div>
+                <div class="col-xs-4 text-center">
+                    <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
+                </div>
             </div>
-            <div class="col-xs-6 text-center">
-                <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
-            </div>
-
         </div>
 
     </section>
