--- a/index.html
+++ b/index.html
@@ -51,64 +51,69 @@
 
     </section>
 
-    <section class="yell">
-        <a name="download">
-            <div class="container" id="yellow">
-                <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <h1>
-                            Discover what all the
-                            <br> buzz is about!
-                        </h1>
-                        <p>Our app is available on any mobile device! Download now to get started!</p>
+    <section id="download" class="yell">
+
+        <div class="container" id="yellow">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h1>
+                        Discover what all the
+                        <br> buzz is about!
+                    </h1>
+                    <p>Our app is available on any mobile device! Download now to get started!</p>
+                    <a href="https://www.apple.com/hu/ios/app-store/">
                         <img id="kep2" src="/img/app-store-badge.svg" alt="appstore">
+                    </a>
+
+                    <a href="https://play.google.com/store">
                         <img id="kep3" src="/img/google-play-badge.svg" alt="google">
-                    </div>
+                    </a>
                 </div>
             </div>
-        </a>
+        </div>
+
     </section>
 
 
-    <section class="white">
-        <a name="features">
-            <div class="container">
+    <section id="features" class="white">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h2>Unlimited Features, Unlimited Fun</h2>
+                    <p>Check out what you can do with this app theme!</p>
+                    <p>_____________</p>
+                </div>
                 <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p>Check out what you can do with this app theme!</p>
-                        <p>_____________</p>
+                    <div class="col-xs-6 text-center">
+                        <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
                     </div>
-                    <div class="row">
-                        <div class="col-xs-6 text-center">
-                            <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
-                        </div>
-                        <div class="col-xs-3 features text-center">
-                            <h6>&#128241;</h6>
-                            <h5>Device Mockups</h5>
-                            <p>Ready to use HTML/CSS device mockups, no Photoshop required!</p>
-                        </div>
+                    <div class="col-xs-3 features text-center">
+                        <h6>&#128241;</h6>
+                        <h5>Device Mockups</h5>
+                        <p>Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                    </div>
 
-                        <div class="col-xs-3 features text-center">
-                            <h6>&#128247;</h6>
-                            <h5>Flexible Use</h5>
-                            <p>Put an image, video, animation, or anything else in the screen!</p>
-                        </div>
-                        <div class="col-xs-3 features text-center">
-                            <h6>&#128230;</h6>
-                            <h5>Free to Use</h5>
-                            <p>As always, this theme is free to download and use for any purpose!</p>
-                        </div>
+                    <div class="col-xs-3 features text-center">
+                        <h6>&#128247;</h6>
+                        <h5>Flexible Use</h5>
+                        <p>Put an image, video, animation, or anything else in the screen!</p>
+                    </div>
+                    <div class="col-xs-3 features text-center">
+                        <h6>&#128230;</h6>
+                        <h5>Free to Use</h5>
+                        <p>As always, this theme is free to download and use for any purpose!</p>
+                    </div>
 
-                        <div class="col-xs-3 features text-center">
-                            <h6> &#128275;</h6>
-                            <h5>Open Source</h5>
-                            <p>Since this theme is MIT licensed, you can use it commercially!</p>
-                        </div>
+                    <div class="col-xs-3 features text-center">
+                        <h6> &#128275;</h6>
+                        <h5>Open Source</h5>
+                        <p>Since this theme is MIT licensed, you can use it commercially!</p>
                     </div>
                 </div>
             </div>
-        </a>
+        </div>
+
     </section>
 
 
@@ -125,18 +130,16 @@
         </div>
     </section>
 
-    <section class="yell">
-        <a name="contact">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 text-center">
-                        <h1>We
-                            <span style="color: red">&#10084;</span> new friends!</h1>
-                    </div>
-
+    <section id="contact" class="yell">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h1>We
+                        <span style="color: red">&#10084;</span> new friends!</h1>
                 </div>
+
             </div>
-        </a>
+        </div>
     </section>
 
     <footer>
