--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/bootstrap3/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato|Muli" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l"
+        crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/ownStyle.css">
     <title>Document</title>
 </head>
@@ -56,7 +60,7 @@
         <div class="container" id="yellow">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h1>
+                    <h1 class="bigger">
                         Discover what all the
                         <br> buzz is about!
                     </h1>
@@ -80,34 +84,43 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h2>Unlimited Features, Unlimited Fun</h2>
+                    <h1>Unlimited Features, Unlimited Fun</h1>
                     <p>Check out what you can do with this app theme!</p>
-                    <p>_____________</p>
+                    <p>__________</p>
                 </div>
                 <div class="row">
-                    <div class="col-xs-6 text-center">
+                    <div class="col-xs-4 text-center">
                         <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
                     </div>
-                    <div class="col-xs-3 features text-center">
-                        <h6>&#128241;</h6>
-                        <h5>Device Mockups</h5>
+                    <div class="col-xs-4 features text-center">
+                        <h6>
+                            <i class="fas fa-mobile-alt"></i>
+                        </h6>
+
+                        <h3>Device Mockups</h3>
                         <p>Ready to use HTML/CSS device mockups, no Photoshop required!</p>
                     </div>
 
-                    <div class="col-xs-3 features text-center">
-                        <h6>&#128247;</h6>
-                        <h5>Flexible Use</h5>
+                    <div class="col-xs-4 features text-center">
+                        <h6>
+                            <i class="fas fa-camera"></i>
+                        </h6>
+                        <h3>Flexible Use</h3>
                         <p>Put an image, video, animation, or anything else in the screen!</p>
                     </div>
-                    <div class="col-xs-3 features text-center">
-                        <h6>&#128230;</h6>
-                        <h5>Free to Use</h5>
+                    <div class="col-xs-4 features text-center">
+                        <h6>
+                            <i class="fas fa-gift"></i>
+                        </h6>
+                        <h3>Free to Use</h3>
                         <p>As always, this theme is free to download and use for any purpose!</p>
                     </div>
 
-                    <div class="col-xs-3 features text-center">
-                        <h6> &#128275;</h6>
-                        <h5>Open Source</h5>
+                    <div class="col-xs-4 features text-center">
+                        <h6>
+                            <i class="fas fa-unlock-alt"></i>
+                        </h6>
+                        <h3>Open Source</h3>
                         <p>Since this theme is MIT licensed, you can use it commercially!</p>
                     </div>
                 </div>
