--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/bootstrap3/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato|Muli" rel="stylesheet">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l"
-        crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c"
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/ownStyle.css">
     <title>Document</title>
@@ -135,7 +133,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1>Stop waiting.
+                    <h1 class="bigger">Stop waiting.
                         <br> Start building.</h1>
                     <button type="button" class="btn btn-default">START NOW FREE</button>
                 </div>
@@ -143,14 +141,29 @@
         </div>
     </section>
 
-    <section id="contact" class="yell">
+    <section id="contact" class="contact">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <h1>We
                         <span style="color: red">&#10084;</span> new friends!</h1>
-                </div>
+                    <a href="http://twitter.com" target="_blank">
+                        <h2 class="tw">
+                            <i class="fab fa-twitter"></i>
+                        </h2>
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <h2 class="fb">
+                            <i class="fab fa-facebook-f"></i>
+                        </h2>
+                    </a>
+                    <a href="https://plus.google.com/discover" target="_blank">
+                        <h2 class="gplus">
+                            <i class="fab fa-google-plus-g"></i>
+                        </h2>
+                    </a>
 
+                </div>
             </div>
         </div>
     </section>
