--- a/index.html
+++ b/index.html
@@ -15,37 +15,47 @@
 
 <body>
     <section class="top">
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container">
-                <ul class="nav navbar-nav my-nav-left">
-                    <li role="navigation">
-                        <a href="http://getbootstrap.com/docs/3.3/getting-started/">Start bootstrap</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right my-nav">
-                    <li role="navigation">
-                        <a href="#download">Download</a>
-                    </li>
-                    <li role="navigation">
-                        <a href="#features">Features</a>
-                    </li>
-                    <li role="navigation">
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+
+                    <a class="navbar-brand" href="http://getbootstrap.com/docs/3.3/getting-started/">Start bootstrap</a>
+
+                </div>
+
+
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav navbar-right my-nav">
+                        <li>
+                            <a href="#download">Download</a>
+                        </li>
+                        <li>
+                            <a href="#features">Features</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-8">
+                <div class="col-xs-12 col-md-8 text-center">
                     <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything
                         else!
                     </h1>
                     <br>
                     <button type="button" class="btn btn-default">START NOW FOR FREE</button>
                 </div>
-                <div class="col-xs-4 text-center">
+                <div class="col-xs-12 col-md-4 text-center">
                     <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
                 </div>
             </div>
@@ -63,13 +73,17 @@
                         <br> buzz is about!
                     </h1>
                     <p>Our app is available on any mobile device! Download now to get started!</p>
-                    <a href="https://www.apple.com/hu/ios/app-store/">
-                        <img id="kep2" src="/img/app-store-badge.svg" alt="appstore">
-                    </a>
 
-                    <a href="https://play.google.com/store">
-                        <img id="kep3" src="/img/google-play-badge.svg" alt="google">
-                    </a>
+                    <div class="col-md-12 col-lg-2 col-lg-offset-4 text-center">
+                        <a href="https://www.apple.com/hu/ios/app-store/">
+                            <img id="kep2" src="/img/app-store-badge.svg" alt="appstore">
+                        </a>
+                    </div>
+                    <div class="col-md-12 col-lg-2  text-center">
+                        <a href="https://play.google.com/store">
+                            <img id="kep3" src="/img/google-play-badge.svg" alt="google">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
