--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-md-8 text-center">
-                    <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything
+                <div class="col-sm-12 col-md-8 text-center">
+                    <h2>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything
                         else!
-                    </h1>
+                    </h2>
                     <br>
-                    <button type="button" class="btn btn-default">START NOW FOR FREE</button>
+                    <p>
+                        <button type="button" class="btn btn-default mybtn">START NOW FOR FREE</button>
+                    </p>
                 </div>
-                <div class="col-xs-12 col-md-4 text-center">
+                <div class="col-sm-12 col-md-4 text-center">
                     <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
                 </div>
             </div>
@@ -67,19 +69,19 @@
 
         <div class="container" id="yellow">
             <div class="row">
-                <div class="col-xs-12 text-center">
+                <div class="col-lg-12 text-center">
                     <h1 class="bigger">
                         Discover what all the
                         <br> buzz is about!
                     </h1>
                     <p>Our app is available on any mobile device! Download now to get started!</p>
 
-                    <div class="col-md-12 col-lg-2 col-lg-offset-4 text-center">
+                    <div class="col-sm-12 col-md-3 col-md-offset-3 text-center">
                         <a href="https://www.apple.com/hu/ios/app-store/">
                             <img id="kep2" src="/img/app-store-badge.svg" alt="appstore">
                         </a>
                     </div>
-                    <div class="col-md-12 col-lg-2  text-center">
+                    <div class="col-sm-12 col-md-3  text-center">
                         <a href="https://play.google.com/store">
                             <img id="kep3" src="/img/google-play-badge.svg" alt="google">
                         </a>
@@ -95,45 +97,49 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 text-center">
+                <div class="col-lg-12 text-center">
                     <h1>Unlimited Features, Unlimited Fun</h1>
                     <p>Check out what you can do with this app theme!</p>
                     <p>__________</p>
                 </div>
                 <div class="row">
-                    <div class="col-xs-4 text-center">
+                    <div class="col-sm-12 col-md-4  text-center">
                         <img class="kep1" src="/img/demo-screen-1.jpg" alt="kep">
                     </div>
-                    <div class="col-xs-4 features text-center">
+                    <div class="col-sm-12 col-md-4  features text-center">
                         <h6>
                             <i class="fas fa-mobile-alt"></i>
                         </h6>
 
                         <h3>Device Mockups</h3>
-                        <p>Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                        <p>Ready to use HTML/CSS device
+                            <br>mockups, no Photoshop required!</p>
                     </div>
 
-                    <div class="col-xs-4 features text-center">
+                    <div class="col-sm-12 col-md-4  features text-center">
                         <h6>
                             <i class="fas fa-camera"></i>
                         </h6>
                         <h3>Flexible Use</h3>
-                        <p>Put an image, video, animation, or anything else in the screen!</p>
+                        <p>Put an image, video, animation,
+                            <br>or anything else in the screen!</p>
                     </div>
-                    <div class="col-xs-4 features text-center">
+                    <div class="col-sm-12 col-md-4  features text-center">
                         <h6>
                             <i class="fas fa-gift"></i>
                         </h6>
                         <h3>Free to Use</h3>
-                        <p>As always, this theme is free to download and use for any purpose!</p>
+                        <p>As always, this theme is free to
+                            <br>download and use for any purpose!</p>
                     </div>
 
-                    <div class="col-xs-4 features text-center">
+                    <div class="col-sm-12 col-md-4  features text-center">
                         <h6>
                             <i class="fas fa-unlock-alt"></i>
                         </h6>
                         <h3>Open Source</h3>
-                        <p>Since this theme is MIT licensed, you can use it commercially!</p>
+                        <p>Since this theme is MIT licensed,
+                            <br> you can use it commercially!</p>
                     </div>
                 </div>
             </div>
@@ -146,10 +152,10 @@
     <section class="photo">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-lg-12">
                     <h1 class="bigger">Stop waiting.
                         <br> Start building.</h1>
-                    <button type="button" class="btn btn-default">START NOW FREE</button>
+                    <button type="button" class="btn btn-default mybtn">START NOW FREE</button>
                 </div>
             </div>
         </div>
@@ -158,7 +164,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 text-center">
+                <div class="col-lg-12 text-center bigger">
                     <h1>We
                         <span style="color: red">&#10084;</span> new friends!</h1>
                     <a href="http://twitter.com" target="_blank">
@@ -185,7 +191,7 @@
     <footer>
         <div class="container text-center">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-lg-12">
                     <p>© Your Website 2018. All Rights Reserved.</p>
                     <a id="modalPrivacy" data-toggle="modal" data-target="#Privacy">Privacy</a> &nbsp;
                     <a id="modalTerms" data-toggle="modal" data-target="#Terms">Terms</a> &nbsp;
