--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                        <span class="sr-only">Toggle navigation</span>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNav">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -30,16 +29,16 @@
                 </div>
 
 
-                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <div class="collapse navbar-collapse" id="myNav">
                     <ul class="nav navbar-nav navbar-right my-nav">
                         <li>
-                            <a href="#download">Download</a>
+                            <a id="downloadMenu">Download</a>
                         </li>
                         <li>
-                            <a href="#features">Features</a>
+                            <a id="featuresMenu">Features</a>
                         </li>
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a id="contactMenu">Contact</a>
                         </li>
                     </ul>
                 </div>
